cmake_minimum_required(VERSION 3.9)
project(ProblemSolving)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-logical-op-parentheses -Wno-parentheses -Wno-shift-negative-value")
set(Boost_USE_STATIC_LIBS ON)
set(Boost_USE_STSTIC_RUNTIME ON)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_DEBUG_LIBS ON)
set(Boost_USE_RELEASE_LIBS ON)
include_directories(Utility)
find_package(Boost 1.65.1 REQUIRED COMPONENTS thread regex filesystem)
if (Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
    link_directories(${Boost_LIBRARY_DIRS})
    file(GLOB ProblemSolvingSRC "*.h" "*.hpp" "*.cpp")
    add_executable(ProblemSolving ${ProblemSolvingSRC})
    target_link_libraries(ProblemSolving ${Boost_LIBRARIES})
endif()
