cmake_minimum_required(VERSION 3.9)
project(ProblemSolving)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-logical-op-parentheses -Wno-parentheses -Wno-shift-negative-value")
set(Boost_USE_STATIC_LIBS ON)
set(Boost_USE_STSTIC_RUNTIME ON)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_DEBUG_LIBS ON)
set(Boost_USE_RELEASE_LIBS ON)
include_directories(Utility)

find_package(Boost CONFIG REQUIRED COMPONENTS thread filesystem regex)
message("Boost Library Found:" ${Boost_FOUND})
if (Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
    message("Boost_INCLUDE_DIRS: " ${Boost_INCLUDE_DIRS})
    link_directories(${Boost_LIBRARY_DIRS})
    link_directories(/usr/local/opt/icu4c/lib)
    message("Boost_LIBRARY_DIRS: " ${Boost_LIBRARY_DIRS})
    file(GLOB ProblemSolvingSRC "*.h" "*.hpp" "*.cpp")
    add_executable(ProblemSolving ${ProblemSolvingSRC})
    target_link_libraries(ProblemSolving ${Boost_LIBRARIES})
    message("Boost_LIBRARIES: " ${Boost_LIBRARIES})
endif()
